# simple_alpha_zero

./: .gitignore  LICENSE  README.md  pyproject.toml
alphaenv/: pyvenv.cfg
meta_noughts_and_crosses/: dev_notebook.ipynb
scripts/: play_meta_noughts_and_crosses.py  play_simple_noughts_and_crosses.py
src/simple_alpha_zero/meta_noughts_and_crosses/: base_player_class.py  meta_board_game.py  printers.py  random_player.py  small_board_game.py
super_tic_tac_toe/: dev_notebook.ipynb
