[tool.poetry]
name = "simple-alpha-zero"
version = "0.1.0"
description = "Simple alpha zero for meta noughts and crosses"
authors = ["eddableheath <edable-heath@turing.ac.uk>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
